# ogrelearn

./: CMakeLists-FetchContent.txt  CMakeLists.txt  main.cpp  plugins.cfg  resources.cfg
